# Team31-CS-6440

./: .dockerignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile.ms1  Dockerfile.ms2  Dockerfile.ms2.test  Dockerfile.ms3  Dockerfile.ms4  Dockerfile.ui  Dockerfile.ui-dev  Dockerfile.ui-production  activate_env.sh  docker-compose.production.yml  docker-compose.yml  index.html  init-ms3-db.sql  init_ms2_db.sql  mypy.ini  nginx.conf  package.json  pyproject.toml  readme.md  render.yaml  run-tests-docker.sh  setup.sh  setup1.sh  start-ms1-docker.sh  start-ms2-docker.sh  vite.config.js
.github/workflows/: ci-with-docker.yml  ci.yml
data/ms1/: cancer.json  dementia.json  diabetes.json
data/ms1/deprecated_trial_data/: x_cancer.json  x_dementia.json  x_diabetes.json
data/ms2/: parsed_eligibility_criteria.csv  sample_input_from_ms1.json  sample_output_to_ms4.json  sample_output_to_ms4_ver2.json
data/ms2/deprecated_eligibility_data/: x_parsed_eligibility_criteria.csv
src/: main.py
src/ms1/: ClinicalTrialsFetcher.py
src/ms2/: MS2_DOCKER_README.md  Receiver.py  ms2_config.py  ms2_database.py  ms2_logics.py  ms2_main.py  ms2_models.py  ms2_pydantic_models.py  ms2_routes.py  railway.toml
src/ms3/: Dockerfile  config.py  init_duckdb_async.py  init_postgres.py  main.py  ms3_config.py  ms3_database.py  requirements.txt  schemas.py  test_api.py  tests_contract.py
src/ms3/tests/: test_api.py  tests_contract.py
src/ms4/: criteria.py  matcher.py  ms4_main.py  ms4_orchestrator.py  patient_cache.py  reasoning_step.py  scored_patient.py  trial.py
src/ui/: HealthStatusHeader.css  MS4TrialMatchResults.css  UI_DOCKER_README.md  index.css  package.json  railway.toml  vite.config.js
src/ui/Clinical Trial Matcher - Patient-to-Study Eligibility Assistant/: index.html  package.json
src/ui/Clinical Trial Matcher - Patient-to-Study Eligibility Assistant/src/: App.jsx  main.jsx
src/ui/Clinical Trial Matcher - Patient-to-Study Eligibility Assistant/src/components/: HealthStatus.jsx  MS2HealthStatus.jsx  MS3HealthStatus.jsx  MS4TrialMatchResults.jsx  SearchBox.jsx
tests/: test_main.py
tests/ms2/: ms2_tests.py  test_ms2.py
