[tool.poetry]
name = "ms3"
version = "0.1.0"
description = "Patient Phenotype microservice for clinical trial matcher"
authors = ["Team 31 <team@example.com>"]
readme = "README.md"
packages = [{ include = "src/ms3" }]

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = {extras = ["standard"], version = "0.118.3"}
uvicorn = "^0.32.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.11.0"
openai = "1.70.0"
instructor = "1.11.3"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pandas-stubs = "*"
types-requests = "*"
types-jsonschema = "*"
pre-commit = "*"
ruff = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[too.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
