[tool.poetry]
name = "development-environment"
version = "0.1.0"
description = "Development environment setup"
authors = ["Developer <developer@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = {extras = ["standard"], version = "0.118.3"}
uvicorn = "^0.32.0"
pydantic = "^2.10.0"
requests = "^2.32.3"
types-requests = "^2.32.4.20250913"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"
isort = "^5.13.2"
pre-commit = "^3.0.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[too.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
